--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-9.34MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.70MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.11MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.74MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: 143.198.130.21, port: 42382, type: vmess, uuid: 03b452a7-907b-4f77-8ca4-60250cc835bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.79MB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
+  - {name: 🇨🇳 中国-9.04MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-313.5KB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.62MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.47MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.39MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
