--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: 143.198.130.21, port: 42382, type: vmess, uuid: 03b452a7-907b-4f77-8ca4-60250cc835bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.79MB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
-  - {name: 🇨🇳 中国-9.04MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-313.5KB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-443.4KB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
+  - {name: 🇨🇳 中国-7.52MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.80MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.58MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.62MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.47MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.41MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.39MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.33MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.32MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-443.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-443.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-443.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
@@ -66,20 +66,20 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-443.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-443.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
@@ -88,13 +88,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-443.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
@@ -104,13 +104,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-443.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
@@ -129,13 +129,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-443.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
