--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.33MB/s(Youtube:不良林), server: cmbe3-vdn.zhs.company, port: 35055, type: vmess, uuid: 1196c95e-16b4-3a86-b12a-33b8c3417dda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: cmbe3-vdn.zhs.company}}
-  - {name: 🇨🇳 中国-8.86MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-14.12MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.82MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.36MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.64MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.26MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.44MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
