--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-14.12MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.82MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.36MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.64MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.26MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.44MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.14MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.78MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-998.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-10.55MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.75MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
+  - {name: 🇸🇬 新加坡-1.63MB/s(Youtube:不良林), server: 67sg01.fans8.xyz, port: 443, type: trojan, password: 332cf3f1-47d5-454d-a6ae-fdffdbe7e85e, sni: 67sg01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: bwg2.gushidawang.cc, port: 57539, type: vmess, uuid: fcf7202c-bd1a-44e9-a25e-bf152f6e5c11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-339.2KB/s(Youtube:不良林), server: 23.19.26.218, port: 6082, type: vmess, uuid: 9674b201-ac76-4322-a9a3-2afd7f746513, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /paQd6Rug/, ws-headers: {Host: 23.19.26.218}}
+  - {name: 🇺🇸 美国-5.09MB/s(Youtube:不良林), server: gcfree.galaxy-cloud.icu, port: 443, type: vmess, uuid: 3f0613b2-fbff-4aa1-8731-3e13f0d6992d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /UAVwoa, ws-headers: {Host: gcfree.galaxy-cloud.icu}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-14.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
